<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blazeorange"
    android:orientation="vertical"
     android:layout_gravity="center_horizontal"
     android:gravity="center_horizontal"
>
    
    <TextView
        android:id="@+id/selectedFileTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_string"
        android:textSize="20sp"
        android:textColor="#330000"
        android:paddingTop="50sp"
    />
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/passwordscreenbuttonshape"
        android:text="@string/back"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:drawableLeft="@drawable/back_icon" 
        android:layout_marginTop="20sp"
    />
    <TextView
        android:id="@+id/enterPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textSize="20sp"
        android:textColor="#802A2A"
        android:paddingTop="50sp"
    />
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:inputType="textPassword"
    	android:hint="@string/password_please"
    />
    <Button
        android:id="@+id/submitPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/passwordscreenbuttonshape"
        android:text="@string/submit_password"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:drawableLeft="@drawable/password_lock"
        android:layout_marginTop="20sp"
    />

</LinearLayout>
